objects/agf__ADM_Application_Approver__c.object
<CustomObject>
    <description>List of approvers for Releases or eReleases.</description>
    <fields>
        <fullName>agf__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application that this Approver supports.</description>
        <label>Application</label>
        <referenceTo>agf__ADM_Application__c</referenceTo>
        <relationshipLabel>Application Approvers</relationshipLabel>
        <relationshipName>Application_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Approval_Context__c</fullName>
        <description>Inform Only -- This Approver will receive notification when an approval request is made.
May Approve -- This Approver, or any other Approver with the same role, may approve the request.
Must Approve -- This Approver must approve all requests. If multiple Approvers have Must Approve context for a role, all of them will be required to approve the request.
Notify When Approved -- The Approver will be notified only when the request has been Approved.</description>
        <inlineHelpText>Inform Only -- will receive all notifications; 
May Approve -- may approve the request;
Must Approve -- must approve all requests; 
Notify When Approved -- will be notified only when the request has been Approved.</inlineHelpText>
        <label>Approval Context</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>agf__Approver_Role__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Inform Only</fullName>
                </value>
                <value>
                    <fullName>May Approve</fullName>
                </value>
                <value>
                    <fullName>Must Approve</fullName>
                </value>
                <value>
                    <fullName>Notify When Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Approval_Type__c</fullName>
        <description>Type of approvals in which this Approver participates.</description>
        <inlineHelpText>Select the type of approvals in which this Approver participates.</inlineHelpText>
        <label>Approval Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Releases</fullName>
                </value>
                <value>
                    <fullName>eReleases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Approver_Email__c</fullName>
        <description>Email of Approver (may be blank if email is same as User email).</description>
        <inlineHelpText>Email of Approver. If Approver is specified, may be blank or must match Approver&apos;s User email. If Approver is not specified, this field may be set to a distribution list.</inlineHelpText>
        <label>Approver Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>agf__Approver_Role__c</fullName>
        <description>The role that this Approver performs.</description>
        <label>Approver Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development Manager</fullName>
                </value>
                <value>
                    <fullName>Distribution List</fullName>
                </value>
                <value>
                    <fullName>QE Manager</fullName>
                </value>
                <value>
                    <fullName>Release Engineer</fullName>
                </value>
                <value>
                    <fullName>Release Manager</fullName>
                </value>
                <value>
                    <fullName>TechOps Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Users record of the Approver.</description>
        <inlineHelpText>Approver. Must be blank if Approver Email is a distribution list.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Approver</label>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Application Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Approval_Conext_Must_Be_Specified</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( agf__Approval_Context__c, &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>agf__Approval_Context__c</errorDisplayField>
        <errorMessage>The Approval Context must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Approver_Email_must_match_users_email</fullName>
        <active>true</active>
        <description>When a Approver user is specified, if an Email is also specified it much match the system&apos;s Email for that user.</description>
        <errorConditionFormula>NOT(ISBLANK(agf__Approver__c)) &amp;&amp; NOT(ISBLANK(agf__Approver_Email__c )) &amp;&amp; agf__Approver_Email__c &lt;&gt; agf__Approver__r.Email</errorConditionFormula>
        <errorDisplayField>agf__Approver_Email__c</errorDisplayField>
        <errorMessage>When an Approver is specified, Approver Email must be blank or match the user&apos;s system-defined email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Approver_Role_Must_Be_Specified</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(agf__Approver_Role__c , &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>agf__Approver_Role__c</errorDisplayField>
        <errorMessage>The Approver Role must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Approver_Type_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( agf__Approval_Type__c )</errorConditionFormula>
        <errorDisplayField>agf__Approval_Type__c</errorDisplayField>
        <errorMessage>Approval Type must be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Approver_or_Email_must_be_specified</fullName>
        <active>true</active>
        <description>Either an Approver or an Email must be specified.</description>
        <errorConditionFormula>ISBLANK(agf__Approver__c)   &amp;&amp;  ISBLANK(agf__Approver_Email__c )</errorConditionFormula>
        <errorMessage>You must specify either an Approver or an Email.</errorMessage>
    </validationRules>
</CustomObject>